<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".4"
            android:orientation="vertical"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selfpic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".6"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dev_by"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/dev_name"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/webpage"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmail"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:orientation="vertical"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/web_button"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="4dp"
                    style="?android:attr/buttonStyleSmall"
                    android:text="@string/web_icon"
                    android:textSize="25dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/oval_button"
                    android:elevation="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web_name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:orientation="vertical"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/github_button"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="4dp"
                    style="?android:attr/buttonStyleSmall"
                    android:text="@string/github_icon"
                    android:textSize="25dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/oval_button"
                    android:elevation="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/git_name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:orientation="vertical"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/gmail_button"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="4dp"
                    style="?android:attr/buttonStyleSmall"
                    android:text="@string/gmail_icon"
                    android:textSize="25dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/oval_button"
                    android:elevation="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmail_name"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>